--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,48 +1,8 @@
 ---
-import { Icon } from 'astro-icon/components'
-
-const { description, links } = Astro.props
+const { description } = Astro.props
 ---
 
 <div class="flex flex-col">
     <h1 class="text-4xl font-bold">notgabry</h1>
-    <p class="text-lg rounded inline-block italic text-zinc-400">{description}</p>
-
-    {
-        links && (
-            <div class="pt-2 space-x-4">
-                <a
-                    href="https://inertiah.uno/github"
-                    target="_blank"
-                    aria-label="GitHub Profile"
-                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
-                    <Icon name="mdi:github" />
-                </a>
-
-                <a
-                    href="https://inertiah.uno/x"
-                    target="_blank"
-                    aria-label="Twitter Profile"
-                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
-                    <Icon name="mdi:twitter" />
-                </a>
-
-                <a
-                    href="https://inertiah.uno/discord"
-                    target="_blank"
-                    aria-label="Discord Profile"
-                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
-                    <Icon name="ic:round-discord" />
-                </a>
-
-                <a
-                    href="mailto:notgdev@proton.me"
-                    target="_blank"
-                    aria-label="Mail Me!"
-                    class="text-xl inline-block bg-neutral-850 hover:bg-neutral-800 transition-all hover:ease-in-out duration-200 ring-1 rounded-md ring-neutral-800 p-2">
-                    <Icon name="mdi:envelope" />
-                </a>
-            </div>
-        )
-    }
+    <p class="text-lg rounded inline-block italic text-neutral-400">{description}</p>
 </div>
