--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Links from '@components/Links.astro'
         </nav>
 
         <div class="w-32 aspect-square rounded-full overflow-hidden mt-16">
-            <img class="hover:animate-spin" src="/static/gabry.png" alt="My Avatar" />
+            <img class="hover:animate-spin" src="/gabry.png" alt="My Avatar" />
         </div>
     </header>
 
