--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,8 +20,8 @@ const { title } = Astro.props
         <meta property="og:description" content="Modern & Minimal ❤" />
         <meta property="theme-color" content="#A9A7F1" />
 
-        <link rel="icon" href="/static/gabry-icon.png" />
-        <link rel="shortcut icon" href="/static/gabry-icon.png" />
+        <link rel="icon" href="/gabry-icon.png" />
+        <link rel="shortcut icon" href="/gabry-icon.png" />
 
         <link rel="sitemap" href="/sitemap-index.xml" />
     </head>
