fix: console error, width & height, removing deprecated imports

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,8 +12,8 @@ import Links from '@components/Links.astro'
             <a class="text-zinc-300 underline" href="https://github.com/notgabry">GitHub</a>
         </nav>
 
-        <div class="w-32 aspect-square rounded-full overflow-hidden mt-16">
-            <img class="hover:animate-spin" src="/gabry.png" alt="My Avatar" />
+        <div class="aspect-square rounded-full overflow-hidden mt-16">
+            <img class="hover:animate-spin" width="128" height="128" src="/gabry.png" alt="My Avatar" />
         </div>
     </header>
 
